--- a/dadoscolaborador.html
+++ b/dadoscolaborador.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Consultor de treinamento</title>
+    <title>Consultor de Treinamentos</title>
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="./CSS/dadoscolaborador.css">
+    <link rel="stylesheet" href="./css/dadoscolaborador.css">
 </head>
 
 <body>
@@ -62,9 +62,17 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item dropdown">
                             <a href="#" data-bs-toggle="dropdown" class="nav-icon pe-md-0">
-                                <img src="/account-logo.png" class="avatar img-fluid" alt="">
+                                <img src="./img/account-logo.png" class="avatar img-fluid" alt="">
                             </a>
                             <div class="dropdown-menu dropdown-menu-end rounded">
+                                <a href="" class="dropdrown-item">
+                                    <i class="lni lni-user"></i>
+                                    <span>Emaildadasdasd</span>
+                                </a>
+                                <a href="" class="dropdrown-item">
+                                    <i class="lni lni-shift-left"></i>
+                                    <span>Sair</span>
+                                </a>
                             </div>
                         </li>
                     </ul>
@@ -86,17 +94,15 @@
                         </td>
                     </tr>
                 </table>
-                
             </div>
             <button class="buttonDados">Baixar Dados</button>
         </div>
-        </div>
-       
     </div>
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
