--- a/perfil.html
+++ b/perfil.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Consultor de treinamento</title>
+    <title>Consultor de Treinamentos</title>
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/aptos.css">
+    <link rel="stylesheet" href="./css/perfil.css">
 </head>
 
 <body>
@@ -54,31 +54,99 @@
             </ul>
         </aside>
         <div class="main">
-            <nav class="navbar navbar-expand px-4 py-3">
-                <form action="#" class="d-none d-sm-inline-block">
-
-                </form>
-                <div class="navbar-collapse collapse">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item dropdown">
-                            <a href="#" data-bs-toggle="dropdown" class="nav-icon pe-md-0">
-                                <img src="./img/account-logo.png" class="avatar img-fluid" alt="">
+          <nav class="navbar navbar-expand px-4 py-3">
+            <form action="#" class="d-none d-sm-inline-block">
+            </form>
+            <div class="navbar-collapse collapse">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item dropdown">
+                        <a href="#" data-bs-toggle="dropdown" class="nav-icon pe-md-0">
+                            <img src="./img/account-logo.png" class="avatar img-fluid" alt="">
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-end rounded">
+                            <a href="" class="dropdrown-item">
+                                <i class="lni lni-user"></i>
+                                <span>Emaildadasdasd</span>
                             </a>
-                            <div class="dropdown-menu dropdown-menu-end rounded">
-
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-            <div class="container">
+                            <a href="" class="dropdrown-item">
+                                <i class="lni lni-shift-left"></i>
+                                <span>Sair</span>
+                            </a>
+                        </div>
+                    </li>
+                </ul>
             </div>
-        </div>
+        </nav>
+        <div class="boxFullElements">
+                <div class="col-md-8 mt-1">
+                  <div class="card mb-3 content">
+                    <h1 class="m-3 pt-3">Dados do Colaborador</h1>
+                    <div class="card-body">
+                      <div class="row">
+                        <div class="col-md-3">
+                          <h5>Matrícula</h5>
+                        </div>
+                        <div class="col-md-9 text-secondary">
+                          103029
+                        </div>
+                      </div>
+                      <hr>
+                      <div class="row">
+                        <div class="col-md-3">
+                          <h5>Nome</h5>
+                        </div>
+                        <div class="col-md-9 text-secondary">
+                          Abílio Gama Neto Junior
+                        </div>
+                      </div>
+                      <hr>
+                      <div class="row">
+                          <div class="col-md-3">
+                            <h5>Função</h5>
+                          </div>
+                          <div class="col-md-9 text-secondary">
+                            Auxiliar de Pedreiro
+                          </div>
+                      </div>
+                      <hr>
+                      <div class="row">
+                          <div class="col-md-3">
+                            <h5>Treinamento Obrigatório</h5>
+                          </div>
+                          <div class="col-md-9 text-secondary">
+                            Aprendizado de produção de cimento
+                          </div>
+                      </div>
+                      <hr>
+                      <div class="row">
+                          <div class="col-md-3">
+                            <h5>Status Treinamento</h5>
+                          </div>
+                          <div class="col-md-9 text-secondary">
+                            Concluído
+                          </div>
+                      </div>
+                      <hr>
+                      <div class="row">
+                          <div class="col-md-3">
+                            <h5>Licença do treinamento</h5>
+                          </div>
+                          <div class="col-md-9 text-secondary">
+                            Em dia
+                          </div> 
+                      </div>
+                    </div>
+                </div>
+                
+            </div>
+              <button class="buttonAprovar">Aprovar Colaborador</button>
+          </div>
+      </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <script src="./js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
