Mudanças no dropdown

--- a/index.html
+++ b/index.html
@@ -1,46 +1,63 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Consultor de Treinamentos</title>
-	<link rel="stylesheet" type="text/css" href="./css/login.css">
-	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-	<script src="https://kit.fontawesome.com/a81368914c.js"></script>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
-	<img class="wave" src="img/RealWave.png">
-	<div class="container">
-		<div class="img">
-			<img src="img/undraw_mobile_encryption_re_yw3o.svg">
-		</div>
-		<div class="login-content">
-			<form action="index.html">
-				<img src="img/avatar.svg">
-				<h2 class="title">Login</h2>
-           		<div class="input-div one">
-           		   <div class="i">
-           		   		<i class="fas fa-user"></i>
-           		   </div>
-           		   <div class="div">
-           		   		<h5>Email</h5>
-           		   		<input type="email" class="input" required>
-           		   </div>
-           		</div>
-           		<div class="input-div pass">
-           		   <div class="i"> 
-           		    	<i class="fas fa-lock"></i>
-           		   </div>
-           		   <div class="div">
-           		    	<h5>Senha</h5>
-           		    	<input class="input" id="passwordI" type="password" name="password" placeholder="Digite sua senha" required>
-                     <i class="bi bi-eye-fill" id="btn-password" onclick="ShowPassword()"></i>
-            	   </div>
-            	</div>
-            <button class="btn" onclick="Logar()">Entrar</button>
-            </form>
-        </div>
+  <head>
+    <title>Consultor de Treinamentos</title>
+    <link rel="stylesheet" type="text/css" href="./css/login.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+    />
+    <script src="https://kit.fontawesome.com/a81368914c.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
+  <body>
+    <img class="wave" src="img/RealWave.png" />
+    <div class="container">
+      <div class="img">
+        <img src="img/undraw_mobile_encryption_re_yw3o.svg" />
+      </div>
+      <div class="login-content">
+        <form action="index.html">
+          <img src="img/avatar.svg" />
+          <h2 class="title">Login</h2>
+          <div class="input-div one">
+            <div class="i">
+              <i class="fas fa-user"></i>
+            </div>
+            <div class="div">
+              <h5>Email</h5>
+              <input type="email" class="input" required />
+            </div>
+          </div>
+          <div class="input-div pass">
+            <div class="i">
+              <i class="fas fa-lock"></i>
+            </div>
+            <div class="div">
+              <h5>Senha</h5>
+              <input
+                class="input"
+                id="passwordI"
+                type="password"
+                name="password"
+                placeholder="Digite sua senha"
+                required
+              />
+              <i
+                class="bi bi-eye-fill"
+                id="btn-password"
+                onclick="ShowPassword()"
+              ></i>
+            </div>
+          </div>
+          <button class="btn" onclick="Logar()">Entrar</button>
+        </form>
+      </div>
     </div>
     <script type="text/javascript" src="./js/login.js"></script>
-</body>
+  </body>
 </html>
