--- a/perfil.html
+++ b/perfil.html
@@ -105,7 +105,7 @@
                   <div class="dropdow-item-container">
                     <a href="#" class="dropdow-item">
                       <i id="icon-elegant" class="lni lni-user"></i>
-                      <span>abiliogama@gmail.com</span>
+                      <span class="span">abiliogama@gmail.com</span>
                     </a>
                   </div>
                   <div class="dropdown-divider"></div>
@@ -129,7 +129,7 @@
                           d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708z"
                         />
                       </svg>
-                      <span>Sair</span>
+                      <span class="span">Sair</span>
                     </a>
                   </div>
                 </div>
